Grammar. Plural nouns "is" -> "are"

--- a/doc/old/rtorrent.1
+++ b/doc/old/rtorrent.1
@@ -14,7 +14,7 @@ rtorrent \- a BitTorrent client for ncurses
 .SH "DESCRIPTION"
 .PP
 \fBrtorrent\fR is a BitTorrent client for ncurses, using
-the \fBlibtorrent\fR library. The client and library is
+the \fBlibtorrent\fR library. The client and library are
 written in C++ with emphasis on speed and efficiency, while delivering
 equivalent features to those found in GUI based clients in an ncurses
 client.
